# polymarket-wc-predictor

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: backfill-martj42.yml  backfill.yml  backtest.yml  ci.yml  daily-squads.yml  db-test.yml  edge-calculator.yml  fit-model.yml  heartbeat.yml  match-model.yml  news-poller.yml  outcome-tracker.yml  pm-discover.yml  selftest.yml  tournament-sim.yml
backend/: __init__.py  config.py  main.py
backend/alerts/: telegram.py
backend/db/: client.py
backend/db/migrations/: 001_initial_schema.sql
backend/edges/: calculator.py  drift.py  outcomes.py  selftest.py
backend/ingestion/: fbref.py  football_data.py  martj42.py  openfootball.py  polymarket.py  sofascore.py
backend/ingestion/news/: reddit.py  rss.py
backend/models/: backtest.py  dixon_coles.py  llm_context.py  squad_strength.py  top_scorer.py  tournament_sim.py
backend/tests/: test_smoke.py
docs/: BUILD_PLAN.md  DEPLOY.md
frontend/: .env.local.example  next.config.js  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/matches/[id]/: page.tsx
frontend/app/teams/[id]/: page.tsx
frontend/lib/: supabase.ts
frontend/public/: manifest.json  sw.js
notebooks/: README.md
