[project]
name = "polymarket-wc-predictor"
version = "0.1.0"
description = "Hybrid statistical + LLM prediction engine for World Cup 2026 Polymarket markets"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Graypigeon0" }]

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.3",
    "structlog>=24.1",

    # Scheduling
    "apscheduler>=3.10",

    # Database
    "supabase>=2.5",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",

    # Modeling
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",

    # Scraping / parsing
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "feedparser>=6.0",
    "selectolax>=0.3",

    # LLM clients
    "google-genai>=0.3",
    "groq>=0.9",

    # Alerting
    "python-telegram-bot>=21.0",

    # CLI
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[project.scripts]
wc-engine = "backend.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
